--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "peregrine"]
 	path = peregrine
 	url = git@github.com:socal-ucr/peregrine.git
+[submodule "caffe"]
+	path = caffe
+	url = git@github.com:socal-ucr/caffe.git
